gccida/g2/parmlist_tags_warning
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/parmlist_tags_warning/src/c-decl.c:5928:7: error: use of undeclared identifier 'already_0'
if ( !already_0 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/parmlist_tags_warning/src/c-decl.c:5941:6: error: use of undeclared identifier 'already_0'
if ( already_0 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/parmlist_tags_warning/src/c-decl.c:5946:1: error: use of undeclared identifier 'already_0'
already_0 = 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/parmlist_tags_warning/src/c-decl.c:5953:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v1 = ( const char *)rtl[2]; 
                    ^~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/parmlist_tags_warning/src/obj/c-decl.o] Error 1
